# rust-mentor

./: .gitignore  Cargo.toml  README.md
data/: rust_by_example_index.json  rust_by_example_index_full.json  rust_library_index.json  the_rust_programming_language.json
docs/: architecture.md  detailed_app_idea.md  features.md  idea.md  implementation.md  screens.md  tasks.md  tasks_scr.md  ux_specification.md
ignore/claude/: detailed_app_idea.md  features.md  implementation.md  ux_specification.md
ignore/claude/prompts/: claude.md
ignore/gemini/: detailed_app_idea.md  features.md  features_adv.md
ignore/gemini/prompts/: gemini.md
src/: app.rs  cargo_project.rs  config.rs  data.rs  event.rs  llm.rs  main.rs  prompt_response.rs  question_generator.rs  test_parse_response.rs  tui.rs  ui.rs
