[package]
name = "RustMentor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = { version = "0.26", features = ["crossterm"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
